--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@amap/amap-jsapi-loader": "^0.0.7",
+    "@ant-design/charts": "^1.3.1",
     "@vitejs/plugin-vue-jsx": "^1.2.0",
     "ant-design-vue": "2.0.1",
+    "antd": "^4.17.2",
     "async": "^3.2.2",
     "axios": "0.21.1",
     "echarts": "5.0.2",
@@ -20,6 +22,7 @@
     "file-saver": "2.0.5",
     "js-cookie": "^3.0.1",
     "lodash": "4.17.21",
+    "lodash-es": "^4.17.21",
     "mockjs": "1.1.0",
     "sass-loader": "^9.0.0",
     "vue": "^3.0.5",
@@ -37,6 +40,8 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.7.0",
     "prettier": "^2.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.32.8",
     "script-loader": "^0.7.2",
     "vite": "^2.0.5"
