--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ant-design-vue": "2.0.1",
     "async": "^3.2.2",
     "axios": "0.21.1",
+    "dayjs": "^1.10.7",
     "echarts": "5.0.2",
     "echarts-extension-amap": "1.9.3",
     "element-plus": "1.0.2-beta.36",
